# google-sheets-lab-notebook-agent

./: .gitignore  README.md  pyproject.toml
docs/: core-shell-csp-next-experiment.md  litscout-prediction-skill-gap-audit.md  live-google-sheets-workflow.md
examples/: core_shell_csp_next_experiment.json  emulsion_polymerization_entry.json  emulsion_polymerization_record.json
schemas/: lab_notebook_workbook.schema.json
src/lab_notebook_agent/: __init__.py  agent.py  cli.py  daily_agent.py  daily_log_results.py  daily_reviews.py  daily_summary.py  experiment_record.py  formulation_normalization.py  google_api.py  google_sheets.py  history.py  litscout.py  material_scaffold.py  material_search.py  materials.py  notebook_search.py  planning.py  prediction.py  preflight.py  recommend.py  recorded_daily_agent.py  result_analysis.py  schema.py  search.py  sheets.py  templates.py
src/lab_notebook_agent/resources/: process_knowledge.json
tests/: test_scaffold.py
